Fix overlapping date over logo

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -393,9 +393,9 @@ iframe {
   .date {
     color: @white;
     position: absolute;
-    bottom: 5rem;
+    bottom: 0.5rem;
     @media (min-width: 768px) {
-      font-size: 3rem;
+      font-size: 2.5rem;
     }
   }
 
